@@ -43,6 +43,7 @@ iOS client
 - Channels are now sorted correctly in TeamTalk on iOS 13 and newer
 - French translation has been updated
 - Blank nicknames are set to NoName followed by user ID
+- Blank characters are automatically removed from username and channel name
 
 Version 5.5.1, 2020/05/03
 Accessible Windows client
